name:                euler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable euler-exe
  main-is:                Main.hs
  hs-source-dirs: app
  build-depends:       base >= 4.7 && < 5, euler
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     EarlyProblems,
                       FiftyToOneHundred,
                       OneHundredToOneFifty,
                       Primes,
                       Probability,
                       Math,
                       Info.EarlyProblems,
                       Info.FiftyToOneHundred
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , array
                     , mtl
                     , integer-gmp
                     , cryptonite
                     , text
                     , random
                     , numbers
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/euler
